Add basic frontend animation

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "background.js",
   "scripts": {
     "clean": "rm -rf dist/background & rm -rf dist/frontend",
-    "serve": "parcel watch src/background/index.js --out-dir dist/background & parcel watch src/frontend/index.js --out-dir dist/frontend",
+    "serve": "parcel watch src/**/* --out-dir dist/background & parcel watch src/frontend/index.js --out-dir dist/frontend",
     "build:back": "parcel build src/background/index.js --out-dir dist/background",
     "build:front": "parcel build src/frontend/index.js --out-dir dist/frontend",
-    "build": "npm run clean && npm run build:back & npm run build:front",
+    "build": "npm run clean && npm run build:back && npm run build:front",
     "package": "npm run build && zip -r dii-hackathon-extension.zip dist/ manifest.json"
   },
   "repository": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/dennisschoepf/dii-hackathon-extension#readme",
   "devDependencies": {
+    "animejs": "^3.2.1",
     "dotenv": "^8.2.0",
     "mqtt": "4.1.0",
     "parcel": "^1.12.4"
