--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "permissions": ["storage", "activeTab"],
   "background": {
     "scripts": ["dist/background/index.js"],
-    "persistent": false
+    "persistent": true
   },
   "content_scripts": [
     {
